--- a/html5portfolio/style.css
+++ b/html5portfolio/style.css
@@ -38,6 +38,7 @@
   /* border-top: 2px solid black;
   border-right: 2px solid black;
   border-bottom: 2px solid black; */
+  background-color: black;
 }
 
 #video{
@@ -45,12 +46,19 @@
 }
 
 .left-bottom {
-  position:fixed; width:50%; height:20%; top:80%;   left:0;
-  border-right: 2px solid black;
+  position:fixed; 
+  width:49.8%; 
+  height:20%; 
+  top:80%;   left:0;
+  /* border-right: 2px solid black; */
+  background-color: black;
 }
 
 .right-top {
-  position:fixed; width:50%; height:80%; top:0;   left:50%;
+  position:fixed; 
+  /* width:50%; 
+  height:80%;  */
+  top:0;   left:50%;
   /* border: 2px solid black; */
 }
 
@@ -72,14 +80,25 @@
   left:50%;
 }
 
-#cameraOnButton, #cameraOffButton, #cameraCaptureButton{
+#cameraCaptureButton{
+  position: fixed;
+  left: 21vw;
   font-size: 18px;
+  bottom: 4vh;
+  background-image: url('./images/shutter_button.jpg');
+  background-size: contain;
+  height: 70px;
+  width: 70px;
+
+  border: none;
+  cursor: pointer;
+
 }
 
 .right-bottom {
   position:fixed; width:50%; height:20%; top:80%;   left:50%;
-  background-color: white;
-  border-left: 2px solid black;
+  background-color: grey;
+  /* border-left: 2px solid black; */
 }
 
 button img{
@@ -89,26 +108,54 @@ button img{
   height: 20px;
 }
 
+.pens{
+  position: fixed;
+  right: 17vw;
+  bottom: 5vh;
+}
+
 #blackButton{
   background-color: black;
   padding: 10px 15px;
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
 }
 
 #redButton{
   background-color: red;
   padding: 10px 15px;
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
 }
 
 #yellowButton{
   background-color: yellow;
   padding: 10px 15px;
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
 }
 
-/* #saveButton{
-  position: absolute;
+#saveButton{
+  /* position: absolute;
   padding: 5px 10px;
-  margin-left: 237px;
-} */
+  margin-left: 237px; */
+  position: fixed;
+  background-image: url('./images/save_icon.png');
+  background-size: contain;
+  border: none;
+  /* background-color: black; */
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  right: 1vw;
+  bottom: 6vh;
+}
 
 
 
@@ -120,3 +167,66 @@ button img{
   text-align: center;
 } */
 
+.switch {
+  position: fixed;
+  /* right: 10px; */
+  left: 43vw;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  bottom: 8vh;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/*슬라이더 그 자체*/
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+/*동그란원 - 이전*/
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+/*원 색깔*/
+input:checked + .slider {
+  background-color: grey;
+}
+
+
+
+/*동그란 원 움직이는 이펙트*/
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* 바깥 */
+.slider.round {
+  border-radius: 34px;
+}
+/*안에 동그라미 border radius*/
+.slider.round:before {
+  border-radius: 50%;
+}
