--- a/html5portfolio/style.css
+++ b/html5portfolio/style.css
@@ -1,10 +1,10 @@
 #statusBar{
   position: fixed;
   top: 2vh;
-  width: 20%;
+  width: 20vw;
   height: 4vh;
-  left: 40%;
-  right: 40%;
+  left: 40vw;
+  right: 40vw;
 
   border-radius: 25px;
 
@@ -29,46 +29,61 @@
 
 .left-top {
   position:fixed; 
-  /* width:50%; 
-  height:80%;  */
   top:0;   
   left:0;
   background-color: white;
   object-fit: scale-down;
-  /* border-top: 2px solid black;
-  border-right: 2px solid black;
-  border-bottom: 2px solid black; */
+
   background-color: black;
+  width: 50vw;
+  height: 80vh;
 }
 
 #video{
-
+  width: 50vw;
+  height: 80vh;
 }
 
 .left-bottom {
+  /* display: block; */
   position:fixed; 
-  width:49.8%; 
-  height:20%; 
-  top:80%;   left:0;
+  width: 50vw; 
+  height:20vh; 
+  top:80vh;
+  left:0;
   /* border-right: 2px solid black; */
   background-color: black;
 }
 
 .right-top {
   position:fixed; 
-  /* width:50%; 
-  height:80%;  */
-  top:0;   left:50%;
+  width: 50vw;
+  top:0;   
+  left:50vw;
   /* border: 2px solid black; */
+  color: red;
 }
 
 #canvasAndFrame{
-  position:fixed; width:50%; height:80%; top:0;   left:50%;
-  /* z-index:1; */
-  /* width:100%; */
-  /* height:300px; */
-  /* margin:0 auto; */
-  /* position: relative;  */
+  position:fixed; 
+  /* width:50%; 
+  height:80%;  */
+  top:0;   
+  left:50%;
+
+  /* #canvasAndFrame{ */
+  /* position:fixed;  */
+  /* width:50vw;  */
+  /* height:80vh;  */
+  /* top:0; */
+  /* left:50vw; */
+}
+
+#frame{
+  /* position:fixed;  */
+  /* top:0;    */
+  /* width:50vw;  */
+  /* height:80vh;  */
 }
 
 #canvasOne{
@@ -78,13 +93,23 @@
   height:80%;  */
   top:0;   
   left:50%;
+
+  /* cursor: url('./images/cursor.cur'), auto;
+  position:fixed; 
+  top:0;   
+  left:50vw;
+  width:50vw; 
+  height:80vh; 
+  object-fit: none; */
 }
 
 #cameraCaptureButton{
-  position: fixed;
-  left: 21vw;
-  font-size: 18px;
-  bottom: 4vh;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%);
+  left: 42.5%;
+  transform: translateY(-50%);
+
   background-image: url('./images/shutter_button.jpg');
   background-size: contain;
   height: 70px;
@@ -96,8 +121,12 @@
 }
 
 .right-bottom {
-  position:fixed; width:50%; height:20%; top:80%;   left:50%;
-  background-color: grey;
+  position:fixed; 
+  width:50vw; 
+  height:20vh; 
+  top:80vh;   
+  left:50vw;
+  background-color: white;
   /* border-left: 2px solid black; */
 }
 
@@ -109,9 +138,11 @@ button img{
 }
 
 .pens{
-  position: fixed;
-  right: 17vw;
-  bottom: 5vh;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%);
+  left: 35%;
+  transform: translateY(-50%);
 }
 
 #blackButton{
@@ -121,6 +152,8 @@ button img{
   height: 60px;
   border: none;
   cursor: pointer;
+  border-radius: 15px;
+  margin-right: 5px;
 }
 
 #redButton{
@@ -130,6 +163,8 @@ button img{
   height: 60px;
   border: none;
   cursor: pointer;
+  border-radius: 15px;
+  margin-right: 5px;
 }
 
 #yellowButton{
@@ -139,42 +174,36 @@ button img{
   height: 60px;
   border: none;
   cursor: pointer;
+  border-radius: 15px;
+  margin-right: 5px;
 }
 
 #saveButton{
-  /* position: absolute;
-  padding: 5px 10px;
-  margin-left: 237px; */
-  position: fixed;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+
   background-image: url('./images/save_icon.png');
   background-size: contain;
+  
   border: none;
-  /* background-color: black; */
   width: 60px;
   height: 60px;
   cursor: pointer;
-  right: 1vw;
-  bottom: 6vh;
+  
+  right: 1rem;
 }
 
-
-
-/* .centered {
+.switch {
   position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-} */
-
-.switch {
-  position: fixed;
-  /* right: 10px; */
-  left: 43vw;
-  display: inline-block;
+  transform: translateY(-50%);
+  
   width: 60px;
   height: 34px;
-  bottom: 8vh;
+  
+  right: 1rem;
+  margin-left: 1em;
 }
 
 .switch input { 
