--- a/doraemonJSminiGamePortfolio/style.css
+++ b/doraemonJSminiGamePortfolio/style.css
@@ -4,16 +4,25 @@ html, body{
 
 body{
   background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-  width: 100%;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .title{
+  font-size: 1.5rem;
+  border: 3px solid white;
   text-align: center;
-  /* font-size: xx-large; */
-  /* background-color: whitesmoke;
-  padding: 2rem;
-  margin-top: 0; */
+  font-family: "Press Start 2P";
+  color: white;
+  border-radius: 1rem;
+
+  width: 55vw;
+  display: block;
+  margin: 0 auto;
+  margin-top: 0.5rem;
+
+  padding-top: 0.5rem;
+
+  background-color: black;
 }
 
 .instruction{
@@ -23,6 +32,7 @@ body{
   padding: 1rem;
   color: red;
   min-width: 70vw;
+  margin: 0;
 }
 
 .container{
@@ -39,47 +49,65 @@ body{
   margin: 0 auto;
 }
 
-.playButtonContainer{
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
-}
-
-.arrowButtonContainer{
-  display: flex;
-  justify-content: center;
-  padding-bottom: 1rem;
-}
-
-
-
-
 .scoreContainer{
-  /* border: 1px solid black; */
-  margin: 5px;
+  border: 3px solid white;
+  box-shadow: 10px 15px 10px black;
+  width: 20rem;
+  /* min-width: 25vw; */
+  display: block;
+  margin: 0 auto;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
   text-align: center;
-  padding-bottom: 1rem;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap */
+  padding-bottom: 0.5rem;
+  background-color: black;
+  border-radius: 1rem;
 }
 
 .scoreGoalContainer{
-  display: inline-flex;
-  flex-direction: column;
+  padding-right: 3rem;
+  left:0;
 }
 
 .scoreEarnedContainer{
+  padding-left: 3rem;
+  right:0;
+}
+
+.scoreGoalContainer, .scoreEarnedContainer{
   display: inline-flex;
   flex-direction: column;
-}
-/* .scoreHeadingContainer{
-  display: flex;
-  border: 1.5px solid white;
+  justify-content: flex-end;
   border-radius: 7%;
-  margin: 1rem;
+  padding-top: 0.5rem;
+
+  /* width: 900px; */
+  margin: 0 auto;
+}
+
+
+#scoreGoalHeading, #scoreEarnedHeading{
+  /* padding: 1rem; */
+  color: white;
+  font-size: 1rem;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: bolder;
+  font-family: "Press Start 2P";
+}
+
+#scoreEarned{
+  /* margin-left: 2.5rem; */
+}
+
+#scoreGoal, #scoreEarned{
+  border: 1.5px solid white;
   padding: 1rem;
+  color: red;
+  border-radius: 7%;
+  font-size: 2rem;
+  font-family: Orbitron;
+  background-color: black;
 }
 
 .scoreContentContainer{
@@ -88,4 +116,51 @@ body{
   border-radius: 7%;
   margin: 1rem;
   padding: 1rem;
+} 
+
+/* #scoreEarnedHeading{
+  padding: 1rem;
 } */
+
+.buttonContainer{
+  display: flex;
+  justify-content: center;
+  padding-bottom: 1rem;
+  /* width: 70vw; */
+}
+
+#startButton:hover, #pauseButton:hover{
+  scale: 1.1;
+}
+
+#startButton, #pauseButton{
+  border: none;
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 50%;
+  box-shadow: 5px 5px;
+  font-size: 3rem;
+}
+
+#startButton{
+  background-color: green;
+}
+
+#pauseButton{
+  background-color: red;
+}
+
+#arrowLeftButton:hover, #arrowRightButton:hover{
+  scale: 1.1;
+}
+
+#arrowLeftButton, #arrowRightButton{
+  border: none;
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px;
+  font-size: 3rem;
+}
