--- a/doraemonJSminiGamePortfolio/style.css
+++ b/doraemonJSminiGamePortfolio/style.css
@@ -5,7 +5,7 @@ html, body{
 body{
   background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
   margin: 0;
-  touch-action: manipulation;
+  touch-action: manipulation; /* https://developer.mozilla.org/en-US/docs/Web/CSS/touch-action#manipulation */
 }
 
 .title{
