--- a/style.css
+++ b/style.css
@@ -63,6 +63,13 @@ header{
   padding: 2em 0;
 }
 
+#contents{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    justify-content: center;
+}
+
 .container{
   width: 90%;
   margin: 0 auto;
@@ -91,13 +98,14 @@ header{
 nav ul{
   list-style: none;
   display: flex;
-  padding: 0; /* 기본 padding-left가 40 들어가있었음 */
-  justify-content: center; /* 수평 정렬 방식 */
+  padding: 0; 
+  justify-content: center; 
 }
 
 nav li{
   margin-left: 2em;
 }
+
 @media screen and (max-width: 675px) {
   nav ul {
       flex-direction: column;
@@ -107,29 +115,35 @@ nav li{
       margin: .5em 0;
   }
 }
+
 nav a{
   color: #707070;
   font-weight: 700;
 }
 
 nav a:hover{
-  /* color: #3b3b3b; */
   text-decoration: underline
 }
 
 nav a:focus{
   color: #3b3b3b;
-  /* text-decoration: underline; */
 }
 
 hr {
   width:100%;
   margin-bottom:0 auto;
-  /* margin-top: 0.3rem; */
 }
 
-#parent-directory{
-  padding: 0rem 1.9rem;
+summary{
+  cursor: pointer;
+  background-color: rgba(128, 128, 128, 0.514);
+  padding: 0.5rem 0;
+  margin-top: 0.5rem;
+  padding-left: 0.5rem;
+  /* border-radius: 1rem; */
+  box-shadow: 5px 5px 5px;
+  /* display: none; */
+  list-style-type: none;
 }
 
 h3{
@@ -143,57 +157,153 @@ a{
   text-decoration: none;
 }
 
-#directory{
-  /* float: left; */
-  margin-left: 5vw;
-}
-
-#developing-duration{
-  float: right;
-  margin-top: 0rem;
-  margin-right: 5vw;
-}
-
-.date-modified{
-  float: right;
-  margin-right: 0rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-#subheading{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-h2{
-  display: inline;
-}
-
-.null{
-  float: right;
-}
-
-#child-directory{
-  padding: 0rem 3.9rem;
-  /* white-space: nowrap; */
-  /* overflow: hidden; */
-  /* text-overflow: ellipsis; */
-}
-
 .file-individual{
   margin-bottom: 0.2rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: block;
 }
 
 i .fab fa-html5{
   display: inline-block;
 }
 
-#portfolio-intro{
+footer{
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.712);
+  padding-bottom: 5px;
+  color: white;
+  width: 100%;
+  height: 3.5vh;
+}
+
+/* ---------------------------------------------- */
+body {
+  margin: 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 300;
+}
+
+main{
+  /* max-width: 80%; */
+  margin: 0 auto;
+  display: block;
+}
+
+img {
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+/* ---------------------------------------------- */
+
+h1, 
+h2,
+h3 {
+  color: #143774;
+  margin-top: 0;
+}
+
+h1 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+a {
+  color: #1792d2;
+}
+
+a:hover,
+a:focus {
+  color: #143774;
+}
+
+strong {
+  font-weight: 700;
+}
+
+/* h1 subtitle */
+.subtitle {
+  font-weight: 700;
+  color: #1792d2;
+  font-size: .75rem;
+  margin: 0;
+}
+
+.portfolio-container{
+  margin-bottom: 3rem;
+}
+
+.portfolio-title {
+  font-size: 1.8rem;
+  display: inline;
+}
+
+/* ---------------------------------------------- */
+
+.container {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.container-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header {
+  background: #f8f8f8;
+  padding: 2em 0;
+  text-align: center;
+  margin-bottom: 3em;
+}
+
+@media (min-width: 675px) {
+  header {
+      text-align: left;
+  }
+  
+  .container-flex {
+      flex-direction: row;
+  }
+}
+
+/* navigation */
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav li {
+  margin-left: 2em;
+}
+
+nav a {
+  text-decoration: none;
+  color: #707070;
+  font-weight: 700;
+  padding: .25em 0;
+}
+
+nav a:hover,
+nav a:focus {
+  color: #1792d2;
+}
+
+@media (max-width: 675px) {
+  nav ul {
+      flex-direction: column;
+  }
+  
+  nav li {
+      margin: .5em 0;
+  }
 }
