--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
-    justify-content: center;
+  justify-content: center;
 }
 
 .container{
@@ -176,6 +176,8 @@ footer{
   color: white;
   width: 100%;
   height: 3.5vh;
+  position: fixed;
+  bottom: 0;
 }
 
 /* ---------------------------------------------- */
@@ -310,4 +312,10 @@ nav a:focus {
   nav li {
       margin: .5em 0;
   }
+}
+
+/* contact.html */
+.contact-container{
+  display: flex;
+  justify-content: space-around;
 }
